--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,13 +4,17 @@ body {
   background-color: #eee;
 }
 
+.warning {
+  border-color: red;
+}
+
 .form-signin {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
 
-.form-signin .form-control {
+.form-control {
   position: relative;
   box-sizing: border-box;
   height: auto;
@@ -18,7 +22,4 @@ body {
   font-size: 16px;
 }
 
-.form-signin .form-control:focus {
-  z-index: 2;
-}
 
