--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
+  height: 100%;
+  background-image: url(../background/main-bg.jpg);
+  background-position: center center;
+  background-size: cover;
 }
 
 .warning {
@@ -22,4 +26,6 @@ body {
   font-size: 16px;
 }
 
-
+.jumbotron {
+  background: none;
+}
