added logout button, and created business card placeholder

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -11,6 +11,14 @@ h3 {
 	font-weight: 500;
 }
 
+#businessCard {
+	box-shadow: 2px 2px 3px grey;
+}
+
+#profileLogout {
+	opacity: 1;
+}
+
 #dynamicTable {
 	height: 400px;
 	overflow: auto;
