--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,3 @@
-body {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #eee;
-  height: 100%;
-  background-image: url(../images/main-bg.jpg);
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
 
 .warning {
   border-color: red;
@@ -29,38 +19,97 @@ body {
 
 .jumbotron {
   background: none;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin: 0px;
 }
 
-.jumbotron .container {
-position: relative;
-top: 130px;
+.largeScreen{
+  display: none;
 }
 
-.logo {
-  z-index: -1;
-  position: absolute;
-  padding-left: 280px;
-  padding-bottom: 400px;
-  top: 132px;
-}
-.smallLogo {
-  text-align: center;
+.smallScreen{
+  display: block;
+  margin-top: 250px;
 }
 
-#sampleFile {
-  opacity: 0;
+#homePage {
+  background-image: url(../images/main-bg.jpg);
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
+}
+
+#clickMeSmall {
+  position: relative;
+  top: -115px;
+  left: -30px;
+}
+
+#prospectingSmall {
+  position: relative;
+  top: -95px;
+  left: 7px;
 }
 
 
+/************************************************
+              MEDIA QUERIES BELOW  
+*************************************************/
 
-@media (max-width : 465px) {
-  .largeScreen{display: none;}
-  .smallScreen{display: block;}
-  .logo{display: none;}
-  .container{text-align: center;}
-}
-@media (min-width: 466px) {
-  .largeScreen{display: block;}
+@media (min-width: 474px) {
+  .largeScreen{
+    display: block;
+    margin-top: 36vh;
+  }
+
+  .largeScreen img {
+    width: 500px;
+  }
+
   .smallScreen{display: none;}
+
+  #clickMeLarge {
+    position: relative;
+    top: -160px;
+    left: 140px;
+    width: 100px;
+  }
+
+  #prospectingLarge {
+    position: relative;
+    top: -120px;
+    left: 130px;
+  }
+
+}
+
+
+@media (min-width: 664px) {
+  .largeScreen img {
+    width: 600px;
+  }
+
+  #clickMeLarge {
+    top: -185px;
+    left: 190px;
+  }
+
+  #prospectingLarge {
+    top: -135px;
+    left: 178px;
+  }
+}
+
+
+@media (min-width: 853px) {
+  #clickMeLarge {
+    top: 50px;
+    left: -415px;
+  }
+
+  #prospectingLarge {
+    top: -110px;
+  }
 }
 
